[gd_scene load_steps=4 format=3 uid="uid://b8j0xqvnhqr5w"]

[ext_resource type="Script" uid="uid://cry0qxjfhv2ph" path="res://scripts/Main.gd" id="1_0j5xk"]
[ext_resource type="Script" uid="uid://bmu674iexr7yy" path="res://scripts/FluidSystem.gd" id="3_fluid"]
[ext_resource type="PackedScene" uid="uid://fac13ns5yvh0" path="res://scenes/UI.tscn" id="4_ui"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0j5xk")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" parent="UI" instance=ExtResource("4_ui")]

[node name="GameArea" type="Node2D" parent="."]

[node name="FluidSystem" type="Node2D" parent="."]
script = ExtResource("3_fluid")
